service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getting-started-service
spec:
  selector:
    app: getting-started-app
  ports:
    - protocol: TCP
      port: 80       # Exposed port
      targetPort: 3000  # Your app's container port
  type: LoadBalancer
